# Search_Knowledge_Base

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: deploy.py  lambda_handler.py  pyproject.toml
backend/app/: PIIRedaction.py  embedding.py  server.py
backend/app/bedrock/: llm.py
backend/app/database/: database_init.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 0001_create_initial_tables.py  0002_create_session_tables.py  0003_create_semantic_cache_tables.py
backend/app/langfuse/: langfuse.py
documents/drama/: merchant-of-venice.md
documents/udemy/ai-engineering/: SETUP-git-linux.md  SETUP-lambda-aws.md
frontend/search-knowledge-base-app/: README.md  package-lock.json  package.json
frontend/search-knowledge-base-app/app/: layout.tsx
frontend/search-knowledge-base-app/app/home/: page.tsx
scripts/: deploy.sh  destroy.sh
terraform/: database.tf  elasticache.tf  main.tf  networking.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
